# apps/vl_learning_app/src/main/java/com/williamsdreams/vl_learning/users_app/controllers/UsersCreatePostV1Controller.java
@@ -10,6 +10,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.UUID;
+
 @RestController
 @RequiredArgsConstructor
 public class UsersCreatePostV1Controller implements UsersCreatePostV1Api {
@@ -19,20 +21,17 @@ public class UsersCreatePostV1Controller implements UsersCreatePostV1Api {
     @Override
     public ResponseEntity<UserDto> postUsersCreate(String xUserId, NewUserDto newUserDto) {
         User user = userCreator.create(
-            NewUser.builder()
-                .externalId(xUserId)
-                .email(newUserDto.getEmail())
-                .name(newUserDto.getName())
-                .password(newUserDto.getPassword())
-                .build()
+                UUID.fromString(xUserId),
+                NewUser.builder()
+                        .email(newUserDto.getEmail())
+                        .name(newUserDto.getName())
+                        .build()
         );
         return ResponseEntity.ok(
             new UserDto(
                 user.getEmail(),
-                user.getPassword(),
                 user.getName(),
-                user.getId(),
-                user.getExternalId()
+                user.getId()
             )
         );
     }
