# apps/vl_learning_app/src/main/resources/swagger.yml
@@ -34,18 +34,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+  /api/v1/users/{userId}:
     get:
       tags:
-          - User get v1
+        - User get v1
       parameters:
-        - in: query
-          name: externalId
+        - in: path
+          name: userId
           schema:
             type: string
-          required: false
-          description: External ID
-      operationId: get-user-by-external-id
-      summary: GET user by external ID
+            format: uuid
+          required: true
+          description: User ID
+      operationId: get-user
+      summary: GET user
       responses:
         '200':
           description: OK
@@ -53,6 +55,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /api/v1/users/{userId}/descriptions:
     post:
       tags:
@@ -348,23 +356,22 @@ components:
               type: string
               format: uuid
               description: User ID
-            externalId:
-              type: string
-              description: External ID
           required:
             - id
     NewUser:
-      allOf:
-        - $ref: '#/components/schemas/UserCredentials'
-        - type: object
-          description: New user
-          properties:
-            name:
-              type: string
-              description: User name
-          required:
-            - externalId
-            - name
+      type: object
+      description: New user
+      properties:
+        email:
+          type: string
+          description: Email
+          format: email
+        name:
+          type: string
+          description: User name
+      required:
+        - email
+        - name
     UserCredentials:
       type: object
       description: User
