# users/src/main/java/com/williamsdreams/vl_learning/users/infrastructure/persistence/postgresql/repository/SpringDataPostgresqlUserRepository.java
@@ -12,6 +12,4 @@ public interface SpringDataPostgresqlUserRepository extends JpaRepository<UserEn
 
     Optional<UserEntity> findByEmail(String email);
 
-    Optional<UserEntity> findByExternalId(String externalId);
-
 }
